# fsevent-stream

./: .deepsource.toml  Cargo.toml  Justfile  README.md
.github/workflows/: test.yml
examples/: low_level.rs  raw.rs  simple.rs
src/: events.rs  ffi.rs  flags.rs  fsevent.rs  lib.rs  observer.rs  raw.rs  stream.rs  sys.rs  tests.rs  utils.rs
src/low_level/: flags.rs  mod.rs  tests.rs
