[package]
name = "fsevent-better"
version = "0.1.0"
edition = "2021"

[features]
default = ["tokio"]
tokio = ["tokio1", "tokio-stream"]
async-std = ["async-std1"]

[dependencies]
async-std1 = { package = "async-std", version = "1.10", default-features = false, features = ["std"], optional = true }
bitflags = "1.3"
core-foundation = "0.9"
either = "1.6"
futures-core = "0.3"
futures-util = "0.3"
log = "0.4"
once_cell = "1.8"
pretty_env_logger = "0.4"
tokio1 = { package = "tokio", version = "1.14", features = ["sync"], optional = true }
tokio-stream = { version = "0.1", optional = true }

[dev-dependencies]
libc = "0.2"
tempfile = "3.2"
tokio1 = { package = "tokio", version = "1.14", features = ["rt-multi-thread", "sync", "macros"] }
async-std1 = { package = "async-std", version = "1.10", features = ["attributes"] }
